Workspace is dumb and gitignore doesn't work